--- a/public/style/master.css
+++ b/public/style/master.css
@@ -11,7 +11,6 @@
   margin: 0 30px;
 }
 
-
 .footer-images {
   display: flex;
   justify-content: flex-start;
@@ -22,7 +21,8 @@
 .homepage-search-form {
   z-index: 20;
 }
-.homepage-background::after{
+
+.homepage-background::after {
   content: " ";
   z-index: 5;
   display: block;
@@ -31,7 +31,47 @@
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, .5)
+  background: rgba(0, 0, 0, .5);
+}
+
+.login-container {
+  height: 667px;
+  width: 470px;
+  
+}
+
+.login-header {
+  font-size: 3em;
+}
+
+.login-form-box {
+  width: 470px;
+  height: 667px;
+}
+
+.btn-facebook {
+  background-color: #3C5A96;
+}
+
+.btn-google {
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+}
+
+.btn-cinch {
+  background-color: black;
+  color: white;
+  border-radius: 6;
+}
+
+.detail-program-detail {
+  width: 764px;
+  height: 902px;
+}
+
+.detail-search-input {
+  height: 50px;
 }
 
 
