--- a/public/style/master.css
+++ b/public/style/master.css
@@ -1,14 +1,42 @@
-body {
-  font-family: "helvetica"
+@font-face {
+  font-family: "Montserrat ExtraLight";
+  src: url("./fonts/Montserrat/Montserrat-ExtraLight.ttf");
+  font-weight: "200";
 }
 
-.light-montserrat {
-  font-family: "'Montserrat', sans-serif";
-  font-weight: 300;
+@font-face {
+  font-family: "Montserrat Light";
+  src: url("./fonts/Montserrat/Montserrat-Light.ttf");
+  font-weight: "300";
 }
+
+@font-face {
+  font-family: "Lato Bold";
+  src: url("./fonts/Lato/Lato-Bold.ttf");
+  font-weight: "700";
+}
+
+@font-face {
+  font-family: "Roboto Medium";
+  src: url("./fonts/Roboto/Roboto-Medium.ttf");
+  font-weight: "500";
+}
+
 .xlight-montserrat {
-  font-family: "'Montserrat', sans-serif";
-  font-weight: 200;
+  font-family: 'Montserrat ExtraLight', sans-serif;
+}
+.light-montserrat {
+  font-family: 'Montserrat Light';
+}
+.lato {
+  font-family: 'Lato Bold', sans-serif;
+}
+.roboto {
+  font-family: 'Roboto Medium', sans-serif;
+}
+
+body {
+  font-family: "helvetica"
 }
 
 .homepage-background {
@@ -19,6 +47,11 @@ body {
   background-size: cover;
 }
 
+.homepage-search-form {
+  width: 943px;
+  height: 50px;
+}
+
 .homepage-form-input::placeholder {
   color: black;
 }
@@ -26,6 +59,12 @@ body {
 .homepage-nav-buttons {
   z-index: 20;
   margin: 0 30px;
+}
+
+.homepage-search-btn {
+  width: 337px;
+  height: 50px;
+  font-size: 12pt;
 }
 
 .footer-images {
@@ -68,8 +107,17 @@ body {
   height: 667px;
 }
 
+#login-email::placeholder,
+#login-password::placeholder{
+  padding: 0px 20px;
+  font-family: "'Montserrat', sans-serif";
+  font-weight: 300;
+  font-size: 14pt;
+}
+
 .btn-facebook {
-  background-color: #3C5A96;
+  background-color: rgb(59, 89, 152);
+  color: white;
 }
 
 .btn-google {
@@ -82,6 +130,7 @@ body {
   background-color: black;
   color: white;
   border-radius: 6;
+  font-size: 12pt;
 }
 
 .detail-program-detail {
@@ -116,6 +165,20 @@ body {
   width: 570px;
   height: 50px;
   margin: 0px;
+}
+
+.register-input-label {
+  font-size: 12pt;
+}
+
+.login-input-text::placeholder {
+  color: rgba(0, 0, 0, .3);
+  font-family: 'Montserrat Light';
+}
+
+.register-input-text::placeholder {
+  color: rgba(0, 0, 0, .3);
+  font-family: 'Montserrat Light';
 }
 
 .search-input {
