--- a/public/style/master.css
+++ b/public/style/master.css
@@ -56,11 +56,17 @@ body {
 
 .homepage-form-input {
   height: 50px;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, .85);
 }
 
 .homepage-form-input::placeholder {
+  padding: 0px 10px;
   color: black;
   letter-spacing: 0pt !important; 
+  font-family: 'Montserrat Light'; 
+  font-size: 10pt;
+  font-weight: 100;
 }
 
 .homepage-nav-buttons {
@@ -85,7 +91,7 @@ body {
   z-index: 20;
 }
 .homepage-tagline {
-  font-size: 62pt !important;
+  font-size: 48pt !important;
 }
 
 .homepage-background::after {
@@ -117,7 +123,7 @@ body {
 #login-email::placeholder,
 #login-password::placeholder{
   padding: 0px 20px;
-  font-family: "'Montserrat', sans-serif";
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   font-size: 14pt;
   letter-spacing: 0pt !important; 
@@ -136,7 +142,7 @@ body {
 
 .btn-cinch {
   background-color: black;
-  color: white;
+  color: #afafaf;
   border-radius: 6;
   font-size: 10pt;
   letter-spacing: 1.6pt;
@@ -177,8 +183,19 @@ body {
   margin: 0px;
 }
 
+#inputState > option selected {
+  color: rgba(0, 0, 0, .3);
+  font-family: 'Montserrat Light';
+  letter-spacing: 0pt !important; 
+  padding-left: 15px;
+}
+
 .register-input-label {
-  font-size: 12pt;
+  font-size: 9pt;
+}
+
+.register-input-text {
+  padding: 15px;
 }
 
 .detail-search-input:placeholder {
@@ -190,6 +207,7 @@ body {
 
 .login-input-text::placeholder {
   color: rgba(0, 0, 0, .3);
+  font-size: 10pt !important;
   font-family: 'Montserrat Light';
   letter-spacing: 0pt !important; 
 }
@@ -199,6 +217,7 @@ body {
   color: rgba(0, 0, 0, .3);
   font-family: 'Montserrat Light';
   letter-spacing: 0pt !important; 
+  padding-left: 10px;
 }
 
 .search-input {
